# CNN-From-Scratch

./: .gitignore  README.md  dataset_test.ipynb  demo.ipynb  layers_test.ipynb  mnist_test.py  pyproject.toml  setup.cfg  test.ipynb  tmp.py
demo/: cifar10.ipynb  cifar20.ipynb  demo_utils.py  fmnist.ipynb  fmnist_mlp.ipynb  template.ipynb
nn/: activations.py  callbacks.py  convolution.py  exceptions.py  initializers.py  layers.py  losses.py  metrics.py  network.py  shortcuts.py  utils.py
nn/layers/: __init__.py  activation.py  base.py  bias.py  conv.py  dense.py  dropout.py  flatten.py  input.py  log.py  padding.py  pool.py  resize.py  softmax.py
nn/utils/: shortcuts.py  statistics.py
nnumpy/layers/: activation.py
numpynet/: network.py
profile/: code.py  profiling.py
