[metadata]
name = nnumpy
version = 0.1.0
author = Łukasz Klimkiewicz
author_email = pypi@mail.ukasz.com
url = https://github.com/klima7/CNN-From-Scratch
description = Simple neural network implementation with numpy
long_description = file: README.md
long_description_content_type = text/markdown
keywords = neural, network, numpy, simple, convolution, dense
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    scipy
    scikit-learn
    tqdm
    numba

[options.package_data]
example = README.md